--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -406,6 +406,15 @@
     <Content Include="Templates\AdminLTE-3.0.4\docs\_layouts\home.html" />
     <Content Include="Templates\AdminLTE-3.0.4\docs\_layouts\page.html" />
     <Content Include="Templates\AdminLTE-3.0.4\docs\_layouts\post.html" />
+    <Content Include="Templates\AdminLTE-3.0.4\images\image-1.jpg" />
+    <Content Include="Templates\AdminLTE-3.0.4\images\image-2.jpg" />
+    <Content Include="Templates\AdminLTE-3.0.4\images\image-3.jpg" />
+    <Content Include="Templates\AdminLTE-3.0.4\images\image-4.jpg" />
+    <Content Include="Templates\AdminLTE-3.0.4\images\image-5.jpg" />
+    <Content Include="Templates\AdminLTE-3.0.4\images\image-6.jpg" />
+    <Content Include="Templates\AdminLTE-3.0.4\images\image-7.jpg" />
+    <Content Include="Templates\AdminLTE-3.0.4\images\image-8.jpg" />
+    <Content Include="Templates\AdminLTE-3.0.4\images\image-9.jpg" />
     <Content Include="Templates\AdminLTE-3.0.4\index.html" />
     <Content Include="Templates\AdminLTE-3.0.4\index2.html" />
     <Content Include="Templates\AdminLTE-3.0.4\index3.html" />
